<resources>
    <string name="app_name">CGV</string>
    <string name="movies">Movies</string>
    <string name="now_showing">Now Showing</string>
    <string name="cinema">Cinema</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="imds">IMDS</string>
    <string name="rotten_tomato">Rotten Tomato</string>
    <string name="metacritic">Metacritic</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="title_activity_ticket_by_theater">TicketByTheater</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="create_an_account_to_access_all_features">Create an account to access all features</string>
    <string name="error_empty">%s can\'t be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_size">%s must be at least 8 characters</string>
    <string name="password_upper_case">%s must be at least 1 Uppercase character</string>
    <string name="password_digit">%s must be at least 1 digit</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="booking_code">Booking Code:</string>
    <string name="booking_code_parameter">Booking Code: &lt;big>&lt;b>%s&lt;/b>&lt;/big></string>
    <string name="price_parameter">PRICE: &lt;b>%s đ&lt;/b>&lt;/b></string>
    <string name="date_parameter">DATE:  &lt;b>%s&lt;/b></string>
    <string name="history_transaction">History Transaction</string>
    <string name="manage_all_your_movie_ticket_bookings">Manage all your movie ticket bookings</string>
    <string name="ticket_detail">Ticket Detail</string>
    <string name="use_the_booking_code_to_pick_up_your_tickets_before_the_show">Use the booking code to pick up your tickets before the show</string>
    <string name="next_step">Next Step</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="log_in_regular">Log in</string>
</resources>
