<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.example.cgv.ui.signup.SignUpActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bottom_detail"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:onClick="@{activity::onClick}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/layout_toast"
            layout="@layout/layout_error_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_title"
            style="@style/normal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:padding="16dp"
            android:text="Sign Up"
            android:textAlignment="viewStart"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_title"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            style="@style/normal_text"
            android:padding="16dp"
            android:text="@string/create_an_account_to_access_all_features"
            android:textAlignment="viewStart"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/sign_up_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_form"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_desc">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/email_address"
                    android:textAlignment="viewStart"
                    style="@style/normal_text.SemiBold.11sp"
                    android:textColor="#7C7B7B"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserName"
                    style="@style/EditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="@string/password"
                    style="@style/normal_text.SemiBold.11sp"
                    android:textAlignment="viewStart"
                    android:textColor="#7C7B7B" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/EditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    style="@style/normal_text.SemiBold.11sp"
                    android:text="@string/full_name"
                    android:textAlignment="viewStart"
                    android:textColor="#7C7B7B" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFullName"
                    style="@style/EditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    style="@style/normal_text.SemiBold.11sp"
                    android:text="@string/phone_number"
                    android:textAlignment="viewStart"
                    android:textColor="#7C7B7B"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhoneNumber"
                    style="@style/EditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />


                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_sign_up"
                    style="@style/normal_text.bold"
                    android:onClick="@{activity::onClick}"
                    android:padding="16dp"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>