<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.example.cgv.ui.login.LogInActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bottom_detail"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/ivBack"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:onClick="@{activity::onClick}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/layout_toast"
            layout="@layout/layout_error_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="16dp"
            android:text="@string/welcome_back"
            android:textAlignment="viewEnd"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="16dp"
            android:text="Log In"
            android:textAlignment="viewEnd"
            android:textColor="#fff"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_form"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_desc">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingStart="8dp"
                    android:text="@string/email_address"
                    android:textAlignment="viewStart"
                    android:textColor="#7C7B7B"
                    android:textSize="11sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserName"
                    style="@style/EditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingStart="8dp"
                    android:text="@string/password"
                    android:textAlignment="viewStart"
                    android:textColor="#7C7B7B"
                    android:textSize="11sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/EditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_sign_up"
                    android:fontFamily="@font/montserrat_bold"
                    android:onClick="@{activity::onClick}"
                    android:padding="16dp"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>