<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bottom_detail"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDrawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/ic_drawer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/movies"
            android:textColor="#FCF6F6"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:tabIndicatorColor="@color/indicatorTablayout"
            app:tabPaddingEnd="20dp"
            app:tabPaddingStart="20dp"
            app:tabSelectedTextColor="@color/textSelectedTablayout"
            app:tabTextAppearance="@style/TextAppearanceTab">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiShowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/now_showing" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tiComing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coming_soon" />

        </com.google.android.material.tabs.TabLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlHome">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.github.islamkhsh.CardSliderViewPager
                    android:id="@+id/vpHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardSlider_baseShadow="20dp"
                    app:cardSlider_cardCornerRadius="10dp"
                    app:cardSlider_minShadow="5dp"
                    app:cardSlider_otherPagesWidth="40dp"
                    app:cardSlider_pageMargin="40dp"
                    app:cardSlider_smallScaleFactor="0.9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctContent"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vpHome">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/textName"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="BlackPaner" />

                    <TextView
                        android:id="@+id/btnTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textTime"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvName"
                        tools:text="Fatasy - 2h" />

                    <Button
                        android:id="@+id/btBuyTicket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="100dp"
                        android:background="@drawable/button_buy_ticket"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/buy_tickets"
                        android:textColor="@color/textName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnTime" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#000"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movie" />

        <Button
            android:id="@+id/btnTheater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Theater"/>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignUp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log In"/>
        <Button
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="History"/>
            android:text="Theater" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>


